Updated Readme and styling for projects.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ EMAIL: toribioaatucidotedu
   <head>
     <meta charset="utf-8">
     <meta name="author" content="Anthony Toribio">
-    <meta name="description" content="description of your page">
+    <meta name="description" content="About Me Page">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- you would link to an external stylesheet here! -->
     <link rel="stylesheet" href="./styles/navbar.css">
