--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Anthony Toribio">
-        <meta name="description" content="Page that contains a form in other to contact Anthony">
+        <meta name="description" content="Page that contains a list of projects.">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- you would link to an external stylesheet here! -->
         <link rel="stylesheet" href="./styles/navbar.css">
