--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
             <h4 id="project-header-desc">A currated list of the projects I have worked on.</h4>
         </section>
         <section class="yt-sect">
-            <img src="./res/github-mark-white.png" id="yt-image" alt="A GIF showcasing the app 'Youtube Fast Forward' and its functionalities" />
+            <img src="./res/walkthrough2.gif" id="yt-image" alt="A GIF showcasing the app 'Youtube Fast Forward' and its functionalities" />
             <article class="project-article">
                 <h1>Youtube Fast Forward</h1>
                 <p>
