Added 2048 image to project page.

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
             </article>
         </section>
         <section class="puzzle-sect">
-            <img src="./res/github-mark-white.png" alt="An image of the 2048 GUI" id="puzzle-image"/>
+            <img src="./res/2048.PNG" alt="An image of the 2048 GUI" id="puzzle-image"/>
             <article class="project-article">
                 <h1>2048 Puzzle Game</h1>
                 <p>
